# thread_message

./: .gitignore  GEMINI.md  README.md
backend/: Cargo.toml
backend/migrations/: 20251202003921_create_messages.sql  20251202042343_add_parent_id_to_messages.sql  20251202050000_create_users.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  chat.rs  mod.rs  thread.rs
backend/src/ws/: mod.rs
backend/tests/: chat_test.rs  thread_test.rs  ws_test.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ChatPage.tsx  LoginPage.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  LoginButton.tsx  MessageList.tsx  ThreadView.tsx
frontend/src/context/: AuthContext.tsx  AuthProvider.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useThread.ts
frontend/src/layouts/: MainLayout.tsx
specs/001-thread-gh-issues/: spec.md
specs/001-thread-gh-issues/checklists/: requirements.md
specs/001-threaded-issue-chat/: data-model.md  plan.md  plan_issue_10.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-threaded-issue-chat/checklists/: requirements.md
specs/001-threaded-issue-chat/contracts/: api.yaml  websocket.md
