[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
dotenvy = "0.15"
thiserror = "2.0.17"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"